[project]
name = "idealista"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "scipy>=1.16.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = []
